# hexchess

./: Action.h  Animation.h  Assets.cpp  Assets.h  Assets.txt  CMakeLists.txt  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  Physics.h  ScenePlay.cpp  TODO.md  Vec2.h  level1.txt  main.cpp  platformer
.cache/clangd/index/: Action.h.6FE659EB7FE89B80.idx  AlResource.hpp.716AFFB2B9D6B4BD.idx  Animation.cpp.0F6DF4E2668A88C8.idx  Animation.h.6A7E3EC3149373A6.idx  Assets.cpp.CD79477DC9097811.idx  Assets.h.8FD8F0D91F4E11A3.idx  Audio.hpp.C1358238E043DEBD.idx  BlendMode.hpp.2EFD81AB75E31F0A.idx  CircleShape.hpp.CBA7BF122B75DCEE.idx  Clipboard.hpp.D532F58F3672A55A.idx  Clock.hpp.7BF390E462C716F6.idx  Color.hpp.E856F0CC4A7D0031.idx  Components.h.D960EA51963EFF8D.idx  Config.hpp.7D128B3C1234FCFA.idx  Context.hpp.7867C7241140D642.idx  ContextSettings.hpp.F7B150DA6A86EE64.idx  ConvexShape.hpp.950E971F04AC99C0.idx  Cursor.hpp.546B935D0889F2DD.idx  Drawable.hpp.C5AF6166C798F41B.idx  Entity.h.92DB0D410A13FBEC.idx  EntityManager.cpp.0DF3C0D3656D4628.idx  EntityManager.h.5D5DF6D5093990D4.idx  Err.hpp.A09F26F91E11BB63.idx  Event.hpp.A2115D99154ED92C.idx  Export.hpp.6F7B06BB90130880.idx  Font.hpp.0EC55B5BCEFAD743.idx  (+199 more)
ResourceFiles/: Assets.txt
SourceFiles/: Action.h  Animation.cpp  Assets.cpp  Assets.h  ChessEngine.cpp  ChessEngine.h  Components.h  Entity.h  EntityManager.cpp  GameEngine.cpp  GameEngine.h  Physics.cpp  Scene.cpp  Scene.h  SceneMenu.cpp  SceneMenu.h  ScenePlay.cpp  ScenePlay.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  main.cpp
assets/images/: tilesetSplitting.py
